modules/vpc/subnets.tf
local

resource "aws_subnet" "sn_a" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "Main"
  }
}
